terraform/backend/sg_app_rules.tf
resource "aws_security_group_rule" "application_server_ec2_ingress_ssh" {
  type        = "ingress"
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # Update this to my IP range

  security_group_id = aws_security_group.application_server_ec2_instance.id
}

resource "aws_security_group_rule" "application_server_ec2_ingress_http" {
  type        = "ingress"
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  security_group_id = aws_security_group.application_server_ec2_instance.id
}

resource "aws_security_group_rule" "application_server_ec2_ingress_https" {
  type        = "ingress"
  from_port   = 443
  to_port     = 443
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  security_group_id = aws_security_group.application_server_ec2_instance.id
}

resource "aws_security_group_rule" "application_server_ec2_egress_all" {
  type        = "egress"
  from_port   = 0
  to_port     = 65535
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  security_group_id = aws_security_group.application_server_ec2_instance.id
}
